css/styles.css
@import url('fonts.css');

body {
	font-family: "Verdana", "Arial", sans-serif;
	background-color: #DCE0EE;
	color: #40536D;
	margin: 0;
}
.dark {
	background-color: #121212;
	color: #ccc;
}

/* Header Styles */
header {
	padding: 20px;
	height: 110px;
}
header * {
	margin: 0;
}
header img {
	width: 100px;
	float: left;
}
.title {
	height: 100px;
	float: left;
	margin-left: 25px;
	display: flex;
	flex-direction: column;
	justify-content: center;
}
.title > h1 {
	margin-top: 15px;
	font-size: 34px;
	text-transform: uppercase;
	font-family: "Exo 2", sans-serif;
}
.title > h2 {
	font-family: "Raleway", sans-serif;
	font-size: 24px;
	font-weight: 500;
	letter-spacing: 1.6px;
	margin-left: 35px;
	margin-top: -8px;
}
/* Header Styles End */

.board {
	display: grid;
	grid-template-rows: repeat(7, 10vh);
	grid-template-columns: repeat(7, 10vh);
	position: relative;
	width: 70vh;
	height: 70vh;
	margin-bottom: 20px;
}

.board > div {
	display: grid;
	place-items: center center;
	user-select: none;
	transition: 0.2s all;
}

#wknight {
	transition: 0.4s all;
}

.figure {
	max-height: 29px;
	max-width: 29px;
	height: 100%;
	width: 100%;
	background: radial-gradient(circle, rgba(255,255,255,0.19) 0%, rgba(255,255,255,1) 100%);
}

.fullyDeployed>.figure{
	background: radial-gradient(circle, rgba(255,200,200,0.19) 0%, rgba(255,200,200,1) 100%);

}

.movementProjection{
	pointer-events: none;
	opacity: 60%;
	block-size: 3%;
}

.toggleMovementProjection{
	margin-left: 10px;
	position: relative;
	display: inline;
}
input[type="checkbox"]{
	position: relative;
	width: 70px;
	height: 30px;
	background: #bdc3c7;
	-webkit-appearance: none;
	border-radius: 20px;
	outline: none;
	transition: .4s;
	box-shadow: inset 0 0 5px rgba(0,0,0,0.2);
	cursor: pointer;
}
input:checked[type="checkbox"]{
	background: green;
}
input[type="checkbox"]::before{
	z-index: 2;
	position: absolute;
	content: "";
	left: 0;
	width: 30px;
	height: 30px;
	background: #fff;
	border-radius: 50%;
	transform: scale(1.1);
	box-shadow: 0 2px 5px rgba(0,0,0,0.2);
	transition: .4s;
}
input:checked[type="checkbox"]::before{
	left: 40px;
}

.labelMovementProjection{
	position: absolute;
	color: white;
	font-weight: 600;
	font-size: 14px;
	font-family: "Arial Narrow";
	pointer-events: none;
}
#onbtn{
	top: 10px;
	left: 11px;
}
#offbtn{
	top: 10px;
	left: 42px;
	color: #34495e;
}

.board > div:nth-child(odd) {
	background: #22232A;
	color: black;
}

.board > div:nth-child(even) {
	background: transparent;
	color: black;
}

.board > div > img {
	transition: 0.5s all;
}

.boardModal {
	position:absolute;
	display:grid;
	place-items: center center;
	width:100%;
	height:100%;
	z-index:1000;
	background-color: transparent !important;
}

.loss_modal {
	text-align: center;
	display:none;
	padding: 20px 80px;
	background: rgba(0,0,0,0.7) !important;
	color:white;
}

.button {
	background-color: #EC7063;
	border: none;
	color: white;
	padding: 5px 12px;
	text-align: center;
	text-decoration: none;
	display: inline-block;
	font-size: 16px;
	margin: 4px 2px;
	cursor: pointer;
}

.body-container {
	display: flex;
	margin: 0px 20px;
}

.sidebar {
	display: flex;
	flex-direction: row;
	padding-left: 3vw;
	padding-top: 30px;
	width: calc(97vw - 70vh);
	position: relative;
}

.sidebar > div > p {
	border: 1px solid black;
	border-radius: 4px 4px 0 0;
	padding: 2px;
	margin: 0;
	cursor: pointer;
}

.sidebar > div.selected > p {
	background-color: rgba(0, 0, 0, 0.1);
}

.sidebar > div > button {
	border: 1px solid black;
	border-radius: 4px 4px 0 0;
	padding: 2px;
	margin: 0;
	cursor: pointer;
}

.sidebar > div > div {
	display: none;
	position: absolute;
	top: calc(1em + 30px);
	left: 3vw;
}

.sidebar > div.selected > div {
	display: block;
}

.hidden {
	visibility: hidden;
}

.timer-bar,.progressbar {
	background-color: white;
	border: 1px black solid;
	padding: 1px;
}

.timer-bar > div,.progressbar > div {
	background-color: black;
	width: 40%;
  /* Adjust with JavaScript */
	height: 5px;
}

.moveTimerBox {
	position: fixed;
	top: 5px;
	left: 5px;
	display: none;
}

.dark-mode {
	position: fixed;
	top: 5px;
	right: 5px;
}

.dark-mode-switch {
	position: relative;
	display: inline-block;
	width: 60px;
	height: 34px;
}

.dark-mode-switch input {
	opacity: 0;
	width: 0;
	height: 0;
}

.dark-mode-switch .slider {
	position: absolute;
	cursor: pointer;
	top: 0;
	left: 0;
	right: 0;
	bottom: 0;
	border-radius: 34px;
	background-color: #ccc;
	transition: 0.4s;
}

.dark-mode-switch .slider:before {
	position: absolute;
	content: '';
	height: 26px;
	width: 26px;
	left: 4px;
	bottom: 4px;
  /* background-color: white; */
  /* border-radius: 50%; */
	background-image: url('../images/dark-mode.svg');
	transition: 0.4s;
}

.dark-mode-switch input:checked + .slider {
	background-color: #ccc;
}

.dark-mode-switch input:checked + .slider:before {
	transform: translateX(26px);
	background-image: url('../images/light-mode.svg');
}

@media (max-width: 1024px) {
	.body-container {
		flex-direction: column;
		text-align: center;
		align-items: center;
	}

	.board {
		width: 100%;
		height: auto !important;
		justify-content: center;
	}

	.sidebar > div > p {
		padding: 4px 2px;
	}

	.sidebar > div > button {
		padding: 4px 2px;
		font: 16px Times New Roman;
	}

	.sidebar > div > div {
		top: calc(1em + 38px);
		text-align: center;
		left: 50%;
		transform: translateX(-50%);
		width: 90vw;
	}

	.sidebar {
		padding-left: 0;
		width: auto;
	}
}

